tests/baselines/reference/jsFileCompilationBindDeepExportsAssignment.errors.txt
tests/cases/compiler/a.js(1,9): error TS2339: Property 'a' does not exist on type 'typeof import("tests/cases/compiler/a")'.


==== tests/cases/compiler/a.js (1 errors) ====
    exports.a.b.c = 0;
            ~
!!! error TS2339: Property 'a' does not exist on type 'typeof import("tests/cases/compiler/a")'.
    